--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@tailwindcss/vite": "^4.1.8",
     "chart.js": "^4.5.0",
     "framer-motion": "^12.16.0",
+    "i18next": "^25.4.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.7.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2"
   },
